--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             </form>
         </div>
         <div id="actual-list">
-            <ol id="list-items">My Bucket List Items
-            </ol>
+            <ol id="list-items">My Bucket List Items</ol>
         </div>
     </div>
 
