featured area changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
     </div>
     <div class="block_container">
         <div class="leftBlock"></div>
-        <div class="rightBlock"></div>
+        <div class="rightBlock">
+            <h2>My Bucket List</h2>
+            <div class="imageContainer">
+                <img class="featuredImage"
+                    src="https://static01.nyt.com/images/2023/02/08/multimedia/08pour-01-fmlw/08pour-01-fmlw-videoSixteenByNine3000.jpg" />
+            </div>
+            <p class="activity">Activity: </p>
+            <p class="location">Location: </p>
+            <p class="dateDue">Complete by: </p>
+        </div>
+
         <div id="div-form">
             <form id="bucket-list-item">
                 <div>
@@ -54,4 +64,5 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
