--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
 
     <div class="banner" id="banner">bucket list creator</div>
-    <div>
-        <h1>Example Bucket-List Items!</h1>
-    </div>
+    
     <div class="block_container">
-        <div class="leftBlock"></div>
+        <div class="leftBlock">
+        </div>
         <div class="rightBlock"></div>
+        <div id="actual-list">
+            <ol id="list-items">Your Bucket List Items</ol>
+        </div>
         <div id="div-form">
             <form id="bucket-list-item">
                 <div>
@@ -25,7 +27,7 @@
                     <input type="text" id="activity" name="name" />
                 </div>
                 <div>
-                    <label for="image-url">Imput Image URL</label>
+                    <label for="image-url">Input Image URL</label>
                     <input type="text" id="image-url" name="image-url" />
                 </div>
                 <div>
@@ -39,10 +41,6 @@
                         <input type="submit" value="Add Bucket-List Item" />
                     </div>
             </form>
-        </div>
-        <div id="actual-list">
-            <ol id="list-items">My Bucket List Items</ol>
-        </div>
     </div>
 
 
