base website design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <div class="banner" id="banner">bucket list creator</div>
     <div class="block_container">
         <div class="leftBlock"></div>
@@ -45,7 +44,11 @@
                     <div>
                         <input type="submit" value="Add Bucket-List Item" />
                     </div>
+                </div>
             </form>
+    </div>
+    <div id="actual-list">
+        <ol id="list-items">Your Bucket List Items</ol>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
