--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
 <body>
     <div class="banner" id="banner">bucket list creator</div>
+    <div class="marquee">
+        <div class="marquee_container">
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+            <p>create your bucket list now!</p>
+        </div>
+    </div>
     <div class="block_container">
         <div class="leftBlock"></div>
         <div class="rightBlock">
