--- a/index.html
+++ b/index.html
@@ -10,19 +10,14 @@
 </head>
 
 <body>
-    <div class="banner" id="banner">bucket list creator</div>
+    <div class="banner" id="banner">🪣 bucket list creator 🪣</div>
     <div class="marquee">
-        <div class="marquee_container">
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
-            <p>create your bucket list now!</p>
+        <div class="marquee_container" background-color: #FE6846;>
+            <p class="marquee__item detail">create your bucket list now!</p>
+            <p class="marquee__item detail">create your bucket list now!</p>
+            <p class="marquee__item detail">create your bucket list now!</p>
+            <p class="marquee__item detail">create your bucket list now!</p>
+            <p class="marquee__item detail">create your bucket list now!</p>
         </div>
     </div>
     <div class="block_container">
@@ -62,7 +57,7 @@
             </form>
     </div>
     <div id="actual-list">
-        <ol id="list-items">Your Bucket List Items</ol>
+        <ul id="list-items"><u>Your Bucket List Items</u></ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
