--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <label for="date-completion">When do you want to complete by?</label>
                     <input class="form-input" type="date" id="completion-date" name="date" />
                     <div>
-                        <input class="form-input" type="submit" value="Add Bucket-List Item" />
+                        <input class="form-input" type="submit" value="Add to your bucket list!" />
                     </div>
                 </div>
             </form>
@@ -62,7 +62,7 @@
         <div id="actual-list">
             <ul id="list-items">
                 <div class=" title">Y<u>our Bucket List Items</div></u>
-                </ul>
+            </ul>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
