--- a/index.html
+++ b/index.html
@@ -12,21 +12,35 @@
 <body>
     <div class="banner" id="banner">🪣 bucket list creator 🪣</div>
     <div class="marquee">
-        <div class="marquee_container" background-color: #FE6846;>
-            <p class="marquee__item detail">create your bucket list now!</p>
-            <p class="marquee__item detail">create your bucket list now!</p>
-            <p class="marquee__item detail">create your bucket list now!</p>
-            <p class="marquee__item detail">create your bucket list now!</p>
-            <p class="marquee__item detail">create your bucket list now!</p>
+        <div class="marquee_container">
+          <p class="marquee__item">create your bucket-list!</p>
+          <p class="marquee__item">create your bucket-list!</p>
+          <p class="marquee__item">create your bucket-list!</p>
+          <p class="marquee__item">create your bucket-list!</p>
+          <p class="marquee__item">create your bucket-list!</p>
         </div>
-    </div>
+        <div class="marquee_container">
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+          </div>
+          <div class="marquee_container">
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+            <p class="marquee__item">create your bucket-list!</p>
+          </div>
+    </div>      
     <div class="block_container">
         <div class="leftBlock"></div>
         <div class="rightBlock">
             <h2 class="title">My Bucket List</h2>
             <div class="imageContainer">
                 <img class="featuredImage"
-                    src="https://static01.nyt.com/images/2023/02/08/multimedia/08pour-01-fmlw/08pour-01-fmlw-videoSixteenByNine3000.jpg" />
+                    src="https://images.pexels.com/photos/1032650/pexels-photo-1032650.jpeg?cs=srgb&dl=pexels-travis-rupert-1032650.jpg&fm=jpg" />
             </div>
             <div class="rightblock-information">
                 <p class="activity">Activity: </p>
