--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Bucket List</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script defer type="text/javascript" src="src/keys.js"></script>
     <script defer type="text/javascript" src="src/index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
 </head>
