added buttons to each div

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                 <div class="title"><u>Add a bucket-list item!</u></div>
                 <div>
                     <label for="name">What do you Want to Do?</label>
-                    <input class="form-input" type="text" id="activity" name="name" />
+                    <input class="form-input" type="text" id="activity" name="name" required />
                 </div>
                 <div>
                     <label for="image-url">Input Image URL</label>
-                    <input class="form-input" type="text" id="image-url" name="image-url" />
+                    <input class="form-input" type="text" id="image-url" name="image-url" required />
                 </div>
                 <div>
                     <label for="location">Location</label>
-                    <input class="form-input" type="text" id="location" name="location" />
+                    <input class="form-input" type="text" id="location" name="location" required />
                 </div>
                 <div>
                     <label for="date-completion">When do you want to complete by?</label>
-                    <input class="form-input" type="date" id="completion-date" name="date" />
+                    <input class="form-input" type="date" id="completion-date" name="date" required />
                     <div>
                         <input class="form-input" type="submit" value="Add to your bucket list!" />
                     </div>
