final weds edits

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div id="actual-list">
             <ul id="list-items">
-                <div class=" title">Y<u>our Bucket List Items</div></u>
+                <div class=" title">My Bucket List Items</div>
             </ul>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
